--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,22 @@
     <artifactId>SimplePrediction</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <dependencies>
+
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
+    </dependency>
+
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-math3</artifactId>
+        <version>3.0</version>
+    </dependency>
+
+    </dependencies>
+
 
 </project>
