--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,18 @@
         <version>2.3</version>
     </dependency>
 
+    <dependency>
+        <groupId>org.jfree</groupId>
+        <artifactId>jfreechart</artifactId>
+        <version>1.0.17</version>
+    </dependency>
+
+    <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.3</version>
+    </dependency>
+
     </dependencies>
 
 </project>
