--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,11 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>SimplePrediction</groupId>
-    <artifactId>SimplePrediction</artifactId>
+    <groupId>NumberPrediction</groupId>
+    <artifactId>NumberPrediction</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
-
-    <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.11</version>
-        <scope>test</scope>
-    </dependency>
 
     <dependency>
         <groupId>org.apache.commons</groupId>
@@ -33,12 +26,6 @@
         <groupId>org.jfree</groupId>
         <artifactId>jfreechart</artifactId>
         <version>1.0.17</version>
-    </dependency>
-
-    <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>2.3</version>
     </dependency>
 
     </dependencies>
