--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
         <version>1.0.17</version>
     </dependency>
 
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.7</version>
+        <scope>test</scope>
+    </dependency>
+
     </dependencies>
 
 </project>
